--- a/WiFi/res/menu/main.xml
+++ b/WiFi/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+ 		android:id="@+id/switch_screen"
+		android:icon="@android:drawable/ic_menu_call"
+		android:showAsAction="ifRoom"
+ 		android:title="@string/item1">
+</item>
 
 </menu>
