--- a/WiFi/res/layout/activity_two.xml
+++ b/WiFi/res/layout/activity_two.xml
@@ -10,4 +10,165 @@
  android:layout_height="wrap_content"
  android:text="This is Activity Two">
 </TextView>
+<TableLayout
+    android:id="@+id/tableAPList"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/wifiInfo"
+    android:layout_below="@+id/wifiInfo"
+    android:background="#dad8ce"
+    android:shrinkColumns="*"
+    android:stretchColumns="*" >
+
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:showDividers="beginning" >
+
+        <TextView
+            android:id="@+id/textTableName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_span="6"
+            android:background="#dad8FF"
+            android:gravity="center"
+            android:text="AP list:"
+            android:textColor="#0000FF"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView android:id="@+id/TextView21" />
+
+        <TextView
+            android:id="@+id/TextView22"
+            android:gravity="center"
+            android:text="M"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <TextView
+            android:id="@+id/TextView23"
+            android:gravity="center"
+            android:text="T"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <TextView
+            android:id="@+id/TextView24"
+            android:gravity="center"
+            android:text="W"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <TextView
+            android:id="@+id/TextView25"
+            android:gravity="center"
+            android:text="T"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <TextView
+            android:id="@+id/textView26"
+            android:gravity="center"
+            android:text="F"
+            android:textStyle="bold"
+            android:typeface="serif" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView31"
+            android:textColor="#228B22"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView32"
+            android:gravity="center_horizontal"
+            android:text="34°C" />
+
+        <TextView
+            android:id="@+id/textView33"
+            android:gravity="center_horizontal"
+            android:text="35°C" />
+
+        <TextView
+            android:id="@+id/textView34"
+            android:gravity="center_horizontal"
+            android:text="34°C" />
+
+        <TextView
+            android:id="@+id/textView35"
+            android:gravity="center_horizontal"
+            android:text="35°C" />
+
+        <TextView
+            android:id="@+id/textView36"
+            android:gravity="center_horizontal"
+            android:text="33°C" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView41"
+            android:textColor="#228B22"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView42"
+            android:gravity="center_horizontal"
+            android:text="28°C" />
+
+        <TextView
+            android:id="@+id/textView43"
+            android:gravity="center_horizontal"
+            android:text="27°C" />
+
+        <TextView
+            android:id="@+id/textView44"
+            android:gravity="center_horizontal"
+            android:text="29°C" />
+
+        <TextView
+            android:id="@+id/textView45"
+            android:gravity="center_horizontal"
+            android:text="26°C" />
+
+        <TextView
+            android:id="@+id/textView46"
+            android:gravity="center_horizontal"
+            android:text="29°C" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/textView47"
+            android:textColor="#228B22"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView48"
+            android:gravity="center_horizontal" />
+    </TableRow>
+</TableLayout>
+
 </LinearLayout>
