--- a/WiFi/res/layout/scan_listview.xml
+++ b/WiFi/res/layout/scan_listview.xml
@@ -6,23 +6,24 @@
     android:orientation="horizontal"
     android:padding="5dip" >
  
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textStyle="bold"
-        android:typeface="sans" />
- 
+     
     <TextView
         android:id="@+id/ap_ssid"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
+        android:layout_height="wrap_content"        
         android:layout_marginTop="5dip"
         android:text=""
         android:textColor="#343434"
         android:textSize="12sp" />
+    <TextView
+        android:id="@+id/ap_rssi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ap_ssid"
+        android:layout_alignParentRight="true"
+        android:text=""
+        android:textStyle="bold"
+        android:typeface="sans" />
  
     <TextView
         android:id="@+id/ch_freq"
