--- a/WiFi/res/layout/scan_listview.xml
+++ b/WiFi/res/layout/scan_listview.xml
@@ -6,48 +6,55 @@
     android:orientation="horizontal"
     android:padding="5dip" >
  
-     
     <TextView
         android:id="@+id/ap_ssid"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"        
-        android:layout_marginTop="5dip"
+        android:layout_height="wrap_content"  
+        android:layout_centerHorizontal="true"
+        android:layout_toRightOf="@+id/icon"       
+        android:layout_marginTop="5dip"        
+        android:paddingRight="5dip"
         android:text=""
         android:textColor="#343434"
-        android:textSize="12sp" />
+        android:textStyle = "bold"
+        android:textSize="16sp" />
+    <!--     
+    <ImageView
+        android:id="@+id/icon"
+        android:paddingRight="5dip"
+        android:layout_toLeftOf="@+id/ap_rssi"         
+    </ImageView>
+     -->
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+     	android:paddingRight="5dip"     	
+     	android:layout_alignParentLeft ="true"         
+        android:src="@drawable/wireless" />
+
+        
     <TextView
         android:id="@+id/ap_rssi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ap_ssid"
-        android:layout_alignParentRight="true"
-        android:text=""
-        android:textStyle="bold"
-        android:typeface="sans" />
+        android:layout_below="@+id/ap_ssid"          
+        android:text=""   
+        android:textSize="12sp"  />    
+                
  
     <TextView
-        android:id="@+id/ch_freq"
+        android:id="@+id/ap_freq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ap_ssid"
-        android:layout_alignParentRight="true"
+        android:layout_below="@+id/ap_ssid"
+        android:paddingLeft="5dip"
+        android:layout_toRightOf="@+id/ap_rssi"         
         android:text=""
         android:textColor="#343434"
         android:textSize="12sp" />
-       
-<!-- 
-     <ImageView
-        android:id="@+id/icon"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/ic_launcher" >
-    </ImageView>
- -->
+ 
 
-     
-     
+ 
  
 </RelativeLayout>
