--- a/WiFi/res/layout/scan_listview.xml
+++ b/WiFi/res/layout/scan_listview.xml
@@ -14,11 +14,12 @@
         android:layout_toRightOf="@+id/icon"       
         android:layout_marginTop="5dip"        
         android:paddingRight="5dip"
-        android:text=""
-        android:textColor="#343434"
+        android:text=""        
         android:textStyle = "bold"
+        android:typeface="serif"
+        android:textColor="#FF0080"
         android:textSize="16sp" />
-    <!--     
+    <!--          android:textColor="#0000FF" -- Blue
     <ImageView
         android:id="@+id/icon"
         android:paddingRight="5dip"
