--- a/WiFi/res/layout/scan_listview.xml
+++ b/WiFi/res/layout/scan_listview.xml
@@ -17,15 +17,9 @@
         android:text=""        
         android:textStyle = "bold"
         android:typeface="serif"
-        android:textColor="#FF0080"
+        android:textColor="#00CC00"
         android:textSize="16sp" />
-    <!--          android:textColor="#0000FF" -- Blue
-    <ImageView
-        android:id="@+id/icon"
-        android:paddingRight="5dip"
-        android:layout_toLeftOf="@+id/ap_rssi"         
-    </ImageView>
-     -->
+    <!--          android:textColor="#0000FF" Blue -->
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -39,7 +33,8 @@
         android:id="@+id/ap_rssi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ap_ssid"          
+        android:layout_below="@+id/ap_ssid" 
+        android:textColor="#0000FF"         
         android:text=""   
         android:textSize="12sp"  />    
                 
@@ -52,7 +47,7 @@
         android:paddingLeft="5dip"
         android:layout_toRightOf="@+id/ap_rssi"         
         android:text=""
-        android:textColor="#343434"
+        android:textColor="#0000FF" 
         android:textSize="12sp" />
  
 
