--- a/WiFi/res/layout/activity_main.xml
+++ b/WiFi/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#000000"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="#000000"
+android:paddingBottom="@dimen/activity_vertical_margin"
+android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
+tools:context=".MainActivity" >
 
     <TextView
         android:id="@+id/wifiState"
@@ -15,13 +15,33 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="TextView" />
+
+<ListView
+    android:id="@+id/listAP"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/wifiInfo"
+    android:layout_below="@+id/wifiInfo"
+    android:background="#000000"  
+    android:divider="#222222"  
+    android:dividerHeight="@dimen/twodp" >
+</ListView>
 <!--  -->
 <Button
     android:id="@+id/wifi_off"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/wifiInfo"
     android:layout_alignParentTop="true"
     android:text="OFF WIFI" />
+
+<Button
+    android:id="@+id/wifi_on"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_toRightOf="@+id/wifi_off"
+    android:text="ON WIFI" />
 
 <Button
     android:id="@+id/wifiParam"
@@ -29,26 +49,16 @@
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/wifi_on"
     android:layout_alignBottom="@+id/wifi_on"
+    android:layout_alignParentRight="true"
     android:text="Param" />
+    <TextView
+        android:id="@+id/wifiInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"        
+        android:gravity="center"
+        android:layout_below="@+id/wifi_on"
+        android:maxLines="5"
+        android:text="INFO"
+        android:textSize="15sp" />
 
-<ListView
-    android:id="@+id/listAP"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_below="@id/wifi_on"
-    android:background="#000000"
-    android:divider="#222222"
-    android:dividerHeight="@dimen/twodp" >
-
-</ListView>
-
-<Button
-    android:id="@+id/wifi_on"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignLeft="@+id/wifiState"
-    android:layout_alignTop="@+id/wifiState"
-    android:text="ON WIFI" />
-
-</RelativeLayout>
+</RelativeLayout> 
