--- a/WiFi/res/layout/activity_main.xml
+++ b/WiFi/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="#000000"
+android:background="#000000"                    
 android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,11 +22,11 @@ tools:context=".MainActivity" >
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/wifiInfo"
     android:layout_below="@+id/wifiInfo"
-    android:background="#000000"  
+	android:background="#000000"        
     android:divider="#222222"  
     android:dividerHeight="@dimen/twodp" >
 </ListView>
-<!--  -->
+<!-- android:background="@drawable/gradient" -->
 <Button
     android:id="@+id/wifi_off"
     android:layout_width="wrap_content"
