--- a/WiFi/res/layout/scan_listview.xml
+++ b/WiFi/res/layout/scan_listview.xml
@@ -17,9 +17,27 @@
         android:text=""        
         android:textStyle = "bold"
         android:typeface="serif"
-        android:textColor="#00CC00"
+        android:textColor="#67E667"        
         android:textSize="16sp" />
-    <!--          android:textColor="#0000FF" Blue -->
+    <!-- accented analogic  
+    http://colorschemedesigner.com/#
+Primary Color:				
+00CC00 	269926	008500	39E639	67E667 
+Secondary Color A:				
+009999 +++	1D7373	006363	33CCCC	5CCCCC
+Secondary Color B:				
+9FEE00	86B32D	679B00	B9F73E	C9F76F
+Complementary Color:				
+FF0000	BF3030	A60000	FF4040	FF7373
+
+complement	
+Primary Color:			
+00CC00	269926	008500	39E639	67E667
+Complementary Color:				
+FF0000	BF3030	A60000	FF4040	FF7373
+               -->
+               
+               
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -33,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ap_ssid" 
-        android:textColor="#0000FF"         
+        android:textColor="#009999"         
         android:text=""   
         android:textSize="12sp"  />    
  
@@ -45,7 +63,7 @@
         android:paddingLeft="5dip"
         android:layout_toRightOf="@+id/ap_rssi"         
         android:text=""
-        android:textColor="#0000FF" 
+        android:textColor="#009999" 
         android:textSize="12sp" />
     
 	<TextView
@@ -55,7 +73,7 @@
         android:layout_toRightOf="@+id/ap_ssid"
         android:layout_marginTop="10dip"     
         android:text=""
-        android:textColor="#0000FF" 
+        android:textColor="#009999" 
         android:textSize="12sp" />
 	    
 	    <ImageView
@@ -73,7 +91,7 @@
         android:layout_toRightOf="@+id/ap_freq"
         android:paddingLeft="5dip"     
         android:text=""
-        android:textColor="#0000FF" 
+        android:textColor="#009999" 
         android:textSize="12sp" />
 	    	
 	    <ImageView      
