--- a/WiFi/res/layout/activity_main.xml
+++ b/WiFi/res/layout/activity_main.xml
@@ -22,7 +22,7 @@ tools:context=".MainActivity" >
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/wifiInfo"
     android:layout_below="@+id/wifiInfo"
-	android:background="#000000"        
+	android:background="@drawable/gradient"        
     android:divider="#222222"  
     android:dividerHeight="@dimen/twodp" >
 </ListView>
