Create design dialog window.

--- a/WiFi/res/layout/dialog_window.xml
+++ b/WiFi/res/layout/dialog_window.xml
@@ -2,26 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#87847E"
     android:orientation="vertical" >
+
     <TextView
         android:id="@+id/title_dialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
+        android:background="#59595E"
+        android:gravity="center_vertical|center_horizontal"
         android:text="Do you want to enable WiFi service ?"
-        android:textColor="@android:color/black"
+        android:textColor="#E7E7E7"
         android:textSize="15dp"
         android:textStyle="bold" >
+
     </TextView>
-    
-   <TextView
+
+    <TextView
         android:id="@+id/message_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:text="You can't use this app unless you enable WiFi."
+        android:text="You can&apos;t use this app unless you enable WiFi."
         android:textColor="@android:color/black"
         android:textSize="15dp"
         android:textStyle="bold" >
@@ -54,6 +59,5 @@
             android:textColor="#5DBCD2"
             android:textStyle="bold" />
     </LinearLayout>
-    
 
 </LinearLayout>
