--- a/WiFi/res/values/styles.xml
+++ b/WiFi/res/values/styles.xml
@@ -28,7 +28,8 @@
         <item name="android:backgroundDimEnabled">false</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">18sp</item>        
-        <item name="android:paddingBottom">5dip</item>       
+        <item name="android:paddingBottom">5dip</item>
+        <item name="android:typeface">serif</item>       
         <item name="android:background">@android:color/transparent</item>       
 	</style>
 
